dlcopy (201505281527-1) lernstick-8; urgency=medium

  * update data partition mode also on exchange partition
  * disable DTD validation so that working offline is possible

 -- Ronny Standtke <ronny.standtke@gmx.net>  Thu, 28 May 2015 15:27:41 +0200

dlcopy (201505251920-1) lernstick-8; urgency=medium

  * improved info about list selections
  * improved dialog handling when updating device lists

 --  Ronny Standtke <ronny.standtke@gmx.net>  Mon, 25 May 2015 19:20:34 +0200

dlcopy (201505251636-1) lernstick-8; urgency=medium

  * support for udisks2 device changes

 --  Ronny Standtke <ronny.standtke@gmx.net>  Mon, 25 May 2015 16:36:16 +0200

dlcopy (201505102002-1) unstable; urgency=medium

  * use parted to create mbr

 --  Ronny Standtke <ronny.standtke@gmx.net>  Sun, 10 May 2015 20:02:17 +0200

dlcopy (201505011759-1) unstable; urgency=low

  [ ronnystandtke ]
  * [a72b] umount data partition before trying to resize it
  * [e6b9] fixed upgrade partition offset

 -- ronnystandtke <ronny.standtke@gmx.net>  Fri, 01 May 2015 17:59:53 +0200

dlcopy (201504221902-1) unstable; urgency=low

  * copy directory ".disk" to system partition

 -- Ronny Standtke <ronny.standtke@fhnw.ch>  Wed, 22 Apr 2015 19:02:38 +0200

dlcopy (201502071904-1) unstable; urgency=low

  * initial support for jessie (still unfinished)

 -- Ronny Standtke <ronny.standtke@fhnw.ch>  Sat, 07 Feb 2015 19:04:05 +0100

dlcopy (201501201035-1) unstable; urgency=low

  * fixed NPE

 -- Ronny Standtke <ronny.standtke@fhnw.ch>  Tue, 20 Jan 2015 10:35:00 +0100

dlcopy (201410021908-1) unstable; urgency=low

  * fixed whiteout handling when creating an image

 -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 02 Oct 2014 19:08:08 +0200

dlcopy (201409111337-1) unstable; urgency=low

  * rebuild with updated tools

 -- Ronny Standtke <ronny.standtke@fhnw.ch>  Thu, 11 Sep 2014 13:37:46 +0200

dlcopy (201409101211-1) unstable; urgency=low
